c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/wrong_parameter_names.c
int foo(int a);

int main(void) {
    return foo(3);
}

int foo(int x) {
    /* Only the parameter names from this definition are in scope.
     * Parameter names from earlier declarations of foo aren't!
     */
    return a;
}